Version 1.3 - 2015-01-22
* Module creation