@@ -1,11 +1,23 @@
 <?xml version="1.0"?>
 <tryton>
     <data>
+        <record model="ir.ui.view" id="agent_view_list">
+            <field name="model">commission.agent</field>
+            <field name="type">tree</field>
+            <field name="inherit" ref="commission.agent_view_list"/>
+            <field name="name">agent_list</field>
+        </record>
         <record model="ir.ui.view" id="agent_view_form">
             <field name="model">commission.agent</field>
             <field name="type">form</field>
             <field name="inherit" ref="commission.agent_view_form"/>
             <field name="name">agent_form</field>
+        </record>
+        <record model="ir.ui.view" id="plan_view_list">
+            <field name="model">commission.plan</field>
+            <field name="type">tree</field>
+            <field name="inherit" ref="commission.plan_view_list"/>
+            <field name="name">plan_list</field>
         </record>
         <record model="ir.ui.view" id="plan_view_form">
             <field name="model">commission.plan</field>
