@@ -1,0 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
+<data>
+    <xpath expr="/tree/field[@name='type_']" position="after">
+        <field name="second_level_commission"/>
+    </xpath>
+</data>
